moved to dh_python2

--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,11 @@
+openmolar-server (2.0.0+hg80~0) unstable; urgency=low
+
+  * using dh_python2
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 07 Dec 2011 13:20:47 +0000
+
+
+
 openmolar-server (2.0.0+hg79~0) unstable; urgency=low
 
   * initial package
