--- a/build_scripts/admin/debian/manpage.1
+++ b/build_scripts/admin/debian/manpage.1
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH OPENMOLAR SECTION "August 15, 2009"
+.TH OPENMOLAR-SERVER SECTION "December 2, 2011"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -16,16 +16,16 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-openmolar \- program to do something
+openmolar-server \- program to do something
 .SH SYNOPSIS
-.B openmolar
+.B openmolar-server
 .RI [ options ] " files" ...
 .br
 .B bar
 .RI [ options ] " files" ...
 .SH DESCRIPTION
 This manual page documents briefly the
-.B openmolar
+.B openmolar-server
 and
 .B bar
 commands.
@@ -33,7 +33,7 @@ commands.
 .\" TeX users may be more comfortable with the \fB<whatever>\fP and
 .\" \fI<whatever>\fP escape sequences to invode bold face and italics,
 .\" respectively.
-\fBopenmolar\fP is a program for managing a dental practice and it's patients.
+\fBopenmolar-server \fP is a program for managing a dental practice and it's patients.
 .SH OPTIONS
 These programs follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
@@ -53,7 +53,7 @@ The programs are documented fully by
 .IR "The Rise and Fall of a Fooish Bar" ,
 available via the Info system.
 .SH AUTHOR
-openmolar was written by <Neil Wallace>.
+openmolar-server was written by <Neil Wallace>.
 .PP
 This manual page was written by Neil Wallace <rowinggolfer@googlemail.com>,
 for the Debian project (and may be used by others).
