--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.0+hg82~0) unstable; urgency=low
+
+  * removed dependencies duplicated by openmolar-common
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 09 Dec 2011 18:29:18 +0000
+
+
 openmolar-client (2.0.0+hg81~0) unstable; urgency=low
 
   * initial debianisation
