--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.0+hg83~0) unstable; urgency=low
+
+  * making the server log more comprehensive
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 12 Dec 2011 11:57:41 +0000
+
+
 openmolar-admin (2.0.0+hg82~0) unstable; urgency=low
 
   * added dependency on python-qscintilla2
