--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.0+hg83~0) unstable; urgency=low
+
+  * added missing dependenct libqt4-sql-psql
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 12 Dec 2011 10:52:49 +0000
+
+
 openmolar-common (2.0.0+hg82~0) unstable; urgency=low
 
   * fixed missing depency python-qt4-sql
