--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.0+hg83~0) unstable; urgency=low
+
+  * making the server log more comprehensive
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 12 Dec 2011 11:58:45 +0000
+
+
 openmolar-server (2.0.0+hg81~2) unstable; urgency=low
 
   * repackage
