--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.0+hg84~0) unstable; urgency=low
+
+  * repackaging only.
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 12 Dec 2011 13:12:56 +0000
+
+
 openmolar-client (2.0.0+hg83~0) unstable; urgency=low
 
   * renamed the openmolar icon to openmolar2.svg.  To prevent clashes with om1 installs.
