--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.0+hg84~0) unstable; urgency=low
+
+  * repackaging only.
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 12 Dec 2011 13:10:24 +0000
+
+
 openmolar-common (2.0.0+hg83~0) unstable; urgency=low
 
   * added missing dependenct libqt4-sql-psql
