--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.0+hg84~0) unstable; urgency=low
+
+  * added permissions.sql (which was preventing correct database creation)
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 12 Dec 2011 13:16:23 +0000
+
+
 openmolar-server (2.0.0+hg83~0) unstable; urgency=low
 
   * making the server log more comprehensive
