--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.0+hg85~0) unstable; urgency=low
+
+  * trying to make the logging facility of the admin app more useful.
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 13 Dec 2011 18:12:48 +0000
+
+
 openmolar-admin (2.0.0+hg84~1) unstable; urgency=low
 
   * altered the admin settings so that it is in charge of all logging.
