--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.0+hg85~0) unstable; urgency=low
+
+  * repackaging after hg commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 13 Dec 2011 18:14:15 +0000
+
+
 openmolar-client (2.0.0+hg84~0) unstable; urgency=low
 
   * repackaging only.
