--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.0+hg85~0) unstable; urgency=low
+
+  * repackaging after hg commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 13 Dec 2011 18:15:23 +0000
+
+
 openmolar-server (2.0.0+hg84~0) unstable; urgency=low
 
   * added permissions.sql (which was preventing correct database creation)
