--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.0+hg86~0) unstable; urgency=low
+
+  * fixed duplicate lines in the log output
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 14 Dec 2011 08:23:21 +0000
+
+
 openmolar-admin (2.0.0+hg85~0) unstable; urgency=low
 
   * trying to make the logging facility of the admin app more useful.
