--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.0+hg87~0) unstable; urgency=low
+
+  *  repackaging after commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 15 Dec 2011 12:04:46 +0000
+
+
 openmolar-admin (2.0.0+hg86~0) unstable; urgency=low
 
   * fixed duplicate lines in the log output
