--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.0+hg87~0) unstable; urgency=low
+
+  *  repackaging after commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 15 Dec 2011 12:08:29 +0000
+
+
 openmolar-client (2.0.0+hg85~0) unstable; urgency=low
 
   * repackaging after hg commit
