--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.0+hg87~0) unstable; urgency=low
+
+  * repackaging after commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 15 Dec 2011 12:02:27 +0000
+
+
 openmolar-common (2.0.0+hg86~0) unstable; urgency=low
 
   * tiny change to the Advisor. Now using the logging module instead of print statements
