--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.0+hg87~0) unstable; urgency=low
+
+  * packaging after hg commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 15 Dec 2011 12:26:38 +0000
+
+
 openmolar-server (2.0.0+hg86~2) unstable; urgency=low
 
   * bugfix of last code.
