--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.0+hg90~0) unstable; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 19 Dec 2011 16:38:30 +0000
+
+
 openmolar-admin (2.0.0+hg87~0) unstable; urgency=low
 
   *  repackaging after commit
