--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.0+hg90~0) unstable; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 19 Dec 2011 16:39:31 +0000
+
+
 openmolar-client (2.0.0+hg87~0) unstable; urgency=low
 
   *  repackaging after commit
