--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.0+hg90~0) unstable; urgency=low
+
+  *trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 19 Dec 2011 16:37:27 +0000
+
+
 openmolar-common (2.0.0+hg87~0) unstable; urgency=low
 
   * repackaging after commit
