--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.0+hg92~0) unstable; urgency=low
+
+  * trial build after commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 21 Dec 2011 01:26:52 +0000
+
+
 openmolar-client (2.0.0+hg90~0) unstable; urgency=low
 
   * trial build
