--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.0+hg92~0) unstable; urgency=low
+
+  * trial build after commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 21 Dec 2011 01:24:18 +0000
+
+
 openmolar-common (2.0.0+hg91~0) unstable; urgency=low
 
   * A new dialog for user/password entry
