--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.0+hg93~0) unstable; urgency=low
+
+  * new global exception catcher
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 30 Dec 2011 09:05:46 +0000
+
+
 openmolar-client (2.0.0+hg92~0) unstable; urgency=low
 
   * trial build after commit
