--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.0+hg93~0) unstable; urgency=low
+
+  * rebuild after commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 30 Dec 2011 08:55:24 +0000
+
+
 openmolar-common (2.0.0+hg92~0) unstable; urgency=low
 
   * trial build after commit
