--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,16 @@
+openmolar-server (2.0.0+hg93~1) unstable; urgency=low
+
+  * rebuild after unsucessfully trying to install a man page
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 02 Jan 2012 23:28:10 +0000
+
+openmolar-server (2.0.0+hg93~0) unstable; urgency=low
+
+  * rebuild after commit
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 30 Dec 2011 09:08:47 +0000
+
+
 openmolar-server (2.0.0+hg92~0) unstable; urgency=low
 
   * trial build after commit
