--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.1+hg000~0) unstable; urgency=low
+
+  * versioning now accessible to end user
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 03 Jan 2012 22:31:26 +0000
+
+
 openmolar-admin (2.0.0+hg93~0) unstable; urgency=low
 
   * new global exception catcher
