--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.1+hg000~0) unstable; urgency=low
+
+  * versioning now accessible to end user
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 03 Jan 2012 22:30:11 +0000
+
+
 openmolar-common (2.0.0+hg93~0) unstable; urgency=low
 
   * rebuild after commit
