--- a/build_scripts/namespace/debian/changelog
+++ b/build_scripts/namespace/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.1~0) unstable; urgency=low
+
+  * new build process after switching using subrepos in the mercurial tree
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 03 Jan 2012 22:41:53 +0000
+
+
 openmolar-namespace (2.0.0+hg81~0) unstable; urgency=low
 
   * initial package
