--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.1+hg002~0) unstable; urgency=low
+
+  * altered versioning info into a function to keep startup clean
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 04 Jan 2012 14:09:39 +0000
+
+
 openmolar-server (2.0.1+hg000~0) unstable; urgency=low
 
   * versioning now accessible to the user
