--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.1+hg001~0) unstable; urgency=low
+
+  * trial build after moving to subrepos
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 04 Jan 2012 23:17:39 +0000
+
+
 openmolar-client (2.0.1+hg000~0) unstable; urgency=low
 
   * versioning now accessible to end user
