--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.1+hg003~0) unstable; urgency=low
+
+  * new messages provided to admin
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 04 Jan 2012 23:19:37 +0000
+
+
 openmolar-server (2.0.1+hg002~0) unstable; urgency=low
 
   * altered versioning info into a function to keep startup clean
