--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.1+hg002~0) unstable; urgency=low
+
+  * no change in functionality, but some key functions have name changes
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 05 Jan 2012 23:30:14 +0000
+
+
 openmolar-client (2.0.1+hg001~0) unstable; urgency=low
 
   * trial build after moving to subrepos
