--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.1+hg004~0) unstable; urgency=low
+
+  * new method for versioning
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 07 Jan 2012 00:42:03 +0000
+
+
 openmolar-client (2.0.1+hg002~0) unstable; urgency=low
 
   * no change in functionality, but some key functions have name changes
