--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.1+hg000~1) unstable; urgency=low
+
+  * new version method
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 07 Jan 2012 00:39:02 +0000
+
+
 openmolar-common (2.0.1+hg000~0) unstable; urgency=low
 
   * versioning now accessible to end user
