--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.1+hg005~3) unstable; urgency=low
+
+  * renamed manpage
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 08 Jan 2012 11:11:14 +0000
+
+
 openmolar-admin (2.0.1+hg005~2) unstable; urgency=low
 
   * Simple (inadequate) Manpage included
