--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.1+hg004~13) unstable; urgency=low
+
+  * renamed manpage
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 08 Jan 2012 11:13:47 +0000
+
+
 openmolar-server (2.0.1+hg004~12) unstable; urgency=low
 
   * moved manpage location (affects only the source package)
