--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.1+hg005~4) unstable; urgency=low
+
+  * rebuild after refactoring
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 14 Jan 2012 21:01:04 +0000
+
+
 openmolar-admin (2.0.1+hg005~3) unstable; urgency=low
 
   * renamed manpage
