--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.1+hg005~0) unstable; urgency=low
+
+  * rebuild after refactoring
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 14 Jan 2012 21:02:31 +0000
+
+
 openmolar-client (2.0.1+hg004~0) unstable; urgency=low
 
   * trial build with null manpage
