--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.2+hg007~0) unstable; urgency=low
+
+  * roll minor version number
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 25 Jan 2012 01:00:06 +0000
+
+
 openmolar-client (2.0.1+hg007~0) unstable; urgency=low
 
   * new common code allowing easier management of database connection
