--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.2+hg006~0) unstable; urgency=low
+
+  * roll minor version number
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 25 Jan 2012 00:59:05 +0000
+
+
 openmolar-server (2.0.1+hg006~1) unstable; urgency=low
 
   * rebuild after some code refactoring
