--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.2+hg006~1) unstable; urgency=low
+
+  * repackaging after hg commit for other packages
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 06 Feb 2012 14:02:18 +0000
+
+
 openmolar-server (2.0.2+hg006~0) unstable; urgency=low
 
   * roll minor version number
