--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.2+hg012~0) unstable; urgency=low
+
+  * fixes a segfaulting bug on older pyqts. (including ubuntu lucid version)
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 07 Feb 2012 23:51:15 +0000
+
+
 openmolar-common (2.0.2+hg009~0) unstable; urgency=low
 
   * moved to a multi-postgres session design
