--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.2+hg015~0) unstable; urgency=low
+
+  * as per hg log
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 29 Feb 2012 17:16:06 +0000
+
+
 openmolar-admin (2.0.2+hg011~0) unstable; urgency=low
 
   * moved to a multi-postgres session design
