--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.2+hg011~0) unstable; urgency=low
+
+  * as per hg log
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 29 Feb 2012 17:17:25 +0000
+
+
 openmolar-client (2.0.2+hg010~0) unstable; urgency=low
 
   * moved to a multi-postgres session design for the admin client, modifed client to allow this
