--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.2+hg015~0) unstable; urgency=low
+
+  * as per hg log
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 29 Feb 2012 17:15:06 +0000
+
+
 openmolar-common (2.0.2+hg012~0) unstable; urgency=low
 
   * fixes a segfaulting bug on older pyqts. (including ubuntu lucid version)
