--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.2+hg008~0) unstable; urgency=low
+
+  * as per hg log
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 29 Feb 2012 17:18:56 +0000
+
+
 openmolar-server (2.0.2+hg006~1) unstable; urgency=low
 
   * repackaging after hg commit for other packages
