--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.2+hg016~0) unstable; urgency=low
+
+  * moved the functions which yield toolbars.
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 01 Mar 2012 23:58:56 +0000
+
+
 openmolar-common (2.0.2+hg015~0) unstable; urgency=low
 
   * as per hg log
