--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.3+hg017~0) unstable; urgency=low
+
+  * removed the om1 import stuff, I will implement this as a plugin
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 15 Mar 2012 10:45:56 +0000
+
+
 openmolar-admin (2.0.2+hg016~0) unstable; urgency=low
 
   * new database creation now working, import Qaction added.
