--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.3+hg020~0) unstable; urgency=low
+
+  *  plugin system tweaked.
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 20 Mar 2012 14:16:14 +0000
+
+
 openmolar-admin (2.0.3+hg017~0) unstable; urgency=low
 
   * removed the om1 import stuff, I will implement this as a plugin
