--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.3+hg013~0) unstable; urgency=low
+
+  *  plugin system tweaked.
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 20 Mar 2012 14:18:00 +0000
+
+
 openmolar-client (2.0.3+hg012~0) unstable; urgency=low
 
   * moved the plugin handling to a new common class, altered some imports and renamed package client_widgets to simply widgets.
