--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.4+hg021~0) unstable; urgency=low
+
+  * Fixed Settings deficiency (stopped full demo data install)
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 20 Mar 2012 15:53:42 +0000
+
+
 openmolar-admin (2.0.3+hg020~0) unstable; urgency=low
 
   *  plugin system tweaked.
