--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.4+hg014~0) unstable; urgency=low
+
+  * version number change
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 20 Mar 2012 16:00:22 +0000
+
+
 openmolar-client (2.0.3+hg013~0) unstable; urgency=low
 
   *  plugin system tweaked.
