--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.4+hg022~0) unstable; urgency=low
+
+  * version numbering change
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 20 Mar 2012 15:49:16 +0000
+
+
 openmolar-common (2.0.3+hg021~0) unstable; urgency=low
 
   * plugin system tweaked.
