--- a/build_scripts/namespace/debian/changelog
+++ b/build_scripts/namespace/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.4~0) unstable; urgency=low
+
+  * version numbering change
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 20 Mar 2012 15:48:16 +0000
+
+
 openmolar-namespace (2.0.3~0) unstable; urgency=low
 
   * version numbering change
