--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.4+hg011~0) unstable; urgency=low
+
+  * version numbering change
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 20 Mar 2012 16:03:10 +0000
+
+
 openmolar-server (2.0.3+hg011~0) unstable; urgency=low
 
   * no changes in this build
