--- a/build_scripts/admin/debian/changelog
+++ b/build_scripts/admin/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.4+hg025~0) unstable; urgency=low
+
+  * plugin_work completed
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 12 Apr 2012 23:07:55 +0100
+
+
 openmolar-admin (2.0.4+hg021~0) unstable; urgency=low
 
   * Fixed Settings deficiency (stopped full demo data install)
