--- a/build_scripts/client/debian/changelog
+++ b/build_scripts/client/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.4+hg017~0) unstable; urgency=low
+
+  * build after admin plugin_work completed
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 12 Apr 2012 23:09:38 +0100
+
+
 openmolar-client (2.0.4+hg014~0) unstable; urgency=low
 
   * version number change
