--- a/build_scripts/common/debian/changelog
+++ b/build_scripts/common/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.4+hg027~0) unstable; urgency=low
+
+  * plugin_work completed
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 12 Apr 2012 23:07:00 +0100
+
+
 openmolar-common (2.0.4+hg022~0) unstable; urgency=low
 
   * version numbering change
