--- a/build_scripts/server/debian/changelog
+++ b/build_scripts/server/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.4+hg012~0) unstable; urgency=low
+
+  * build after admin plugin_work completed
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 12 Apr 2012 23:10:38 +0100
+
+
 openmolar-server (2.0.4+hg011~0) unstable; urgency=low
 
   * version numbering change
