--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.63+hg028-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 24 Apr 2012 22:34:36 +0100
+
+
 openmolar-common (2.0.62+hg027-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
