--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-client (2.0.63+hg017-1~__DIST__0) __DIST__; urgency=low
+
+  * new pbuilder environments
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 07 Jun 2012 00:51:23 +0100
+
+
+openmolar-client (2.0.63+hg017-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 24 Apr 2012 23:43:57 +0100
+
+
 openmolar-client (2.0.62+hg017-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
