--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.63+hg028-1~__DIST__0) __DIST__; urgency=low
+
+  * new pbuilder environment
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 07 Jun 2012 00:37:29 +0100
+
+
 openmolar-common (2.0.63+hg028-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
