--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-common (2.0.63+hg028-1~__DIST__0) __DIST__; urgency=low
+
+  * new pbuilder environment
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 07 Jun 2012 00:37:07 +0100
+
+
+openmolar-common (2.0.63+hg028-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 24 Apr 2012 23:43:47 +0100
+
+
 openmolar-common (2.0.62+hg027-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
