--- a/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.63-2~__DIST__0) __DIST__; urgency=low
+
+  * new build environment
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 06 Jun 2012 22:52:02 +0100
+
+
 openmolar-namespace (2.0.63-1~__DIST__0) __DIST__; urgency=low
 
   * fixed Standards-Version
