--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.63+hg012-1~__DIST__0) __DIST__; urgency=low
+
+  * new pbuilder environments
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 07 Jun 2012 00:50:46 +0100
+
+
 openmolar-server (2.0.63+hg012-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
