--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-server (2.0.63+hg012-1~__DIST__0) __DIST__; urgency=low
+
+  * new pbuilder environments
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 07 Jun 2012 00:50:18 +0100
+
+
+openmolar-server (2.0.63+hg012-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 24 Apr 2012 23:44:18 +0100
+
+
 openmolar-server (2.0.62+hg012-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
