--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-namespace (2.0.64-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 02:11:01 +0100
+
+
+openmolar-namespace (2.0.63-2~__DIST__0) __DIST__; urgency=low
+
+  * test build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 00:01:26 +0100
+
+
 openmolar-namespace (2.0.63-1~__DIST__0) __DIST__; urgency=low
 
   * new build environment
