--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-server (2.0.64+hg012-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 02:12:00 +0100
+
+
+openmolar-server (2.0.63+hg012-2~__DIST__0) __DIST__; urgency=low
+
+  * test build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 00:03:54 +0100
+
+
 openmolar-server (2.0.63+hg012-1~__DIST__0) __DIST__; urgency=low
 
   * new pbuilder environments
