moving to a new way of stipulating the demo connection.

--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-admin (2.0.65+hg026-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 18 Jul 2012 20:29:42 +0100
+
+
+openmolar-admin (2.0.64+hg026-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 18 Jul 2012 10:08:51 +0100
+
+
 openmolar-admin (2.0.64+hg025-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
