--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.64+hg026-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 18 Jul 2012 10:08:44 +0100
+
+
 openmolar-admin (2.0.64+hg025-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
