--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.64+hg013-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 18 Jul 2012 10:08:57 +0100
+
+
 openmolar-server (2.0.64+hg012-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream release
