--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.65+hg026-1~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 18 Jul 2012 21:26:09 +0100
+
+
 openmolar-admin (2.0.65+hg026-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
