--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.65+hg020-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 18 Jul 2012 21:25:55 +0100
+
+
 openmolar-client (2.0.64+hg020-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
