--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.65+hg014-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 18 Jul 2012 21:26:25 +0100
+
+
 openmolar-server (2.0.64+hg013-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
