--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.65-1~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 19 Jul 2012 00:49:15 +0100
+
+
 openmolar-namespace (2.0.65-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
