--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.68+hg027-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 20 Jul 2012 18:38:04 +0100
+
+
 openmolar-admin (2.0.67+hg027-0~__DIST__0) __DIST__; urgency=low
 
   * added postinst script to create symlink in /etc/openmolar/client/connections* etc..
