--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.68+hg031-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 20 Jul 2012 18:37:41 +0100
+
+
 openmolar-common (2.0.66+hg031-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
