--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-client (2.0.69+hg021-1~__DIST__0) __DIST__; urgency=low
+
+  * new postinst script to force the symlinks (ln -sf)
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 21 Jul 2012 08:38:20 +0100
+
+
+openmolar-client (2.0.69+hg021-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 21 Jul 2012 00:59:43 +0100
+
+
 openmolar-client (2.0.68+hg021-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
