--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.69+hg032-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 21 Jul 2012 00:59:33 +0100
+
+
 openmolar-common (2.0.68+hg031-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
