--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.70+hg032-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 08 Aug 2012 23:17:16 +0100
+
+
 openmolar-admin (2.0.70+hg030-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
