--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.70+hg035-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 08 Aug 2012 23:16:39 +0100
+
+
 openmolar-common (2.0.70+hg033-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
