--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.70-2~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 08 Aug 2012 23:16:03 +0100
+
+
 openmolar-namespace (2.0.70-1~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
