--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.70+hg019-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 08 Aug 2012 23:17:20 +0100
+
+
 openmolar-server (2.0.70+hg018-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
