--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.71+hg023-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 01:01:49 +0100
+
+
 openmolar-client (2.0.70+hg023-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
