--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.71+hg036-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 01:01:45 +0100
+
+
 openmolar-common (2.0.70+hg035-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
