--- a/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
@@ -1,5 +1,12 @@
 openmolar-namespace (2.0.71-0~__DIST__0) __DIST__; urgency=low
 
+  * new upstream
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 01:01:30 +0100
+
+
+openmolar-namespace (2.0.71-0~__DIST__0) __DIST__; urgency=low
+
   * experimental build of broken server
 
  -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 09 Aug 2012 22:06:16 +0100
