--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.71-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 01:01:10 +0100
+
+
 openmolar-namespace (2.0.70-2~__DIST__0) __DIST__; urgency=low
 
   * trial build
