--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.76+hg039-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 14 Aug 2012 11:52:06 +0100
+
+
 openmolar-common (2.0.75+hg039-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
