--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.76+hg026-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 14 Aug 2012 11:52:39 +0100
+
+
 openmolar-server (2.0.75+hg026-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
