created a separate script to update the pg_user password for the database owner.

--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.80+hg024-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 15 Aug 2012 16:54:16 +0100
+
+
 openmolar-client (2.0.77+hg024-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
