--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.80+hg029-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 15 Aug 2012 16:54:25 +0100
+
+
 openmolar-server (2.0.77+hg028-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
