--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.83+hg024-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 16 Aug 2012 23:43:35 +0100
+
+
 openmolar-client (2.0.80+hg024-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
