--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.83+hg042-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 16 Aug 2012 23:43:28 +0100
+
+
 openmolar-common (2.0.80+hg041-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
