--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.83+hg031-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 16 Aug 2012 23:43:41 +0100
+
+
 openmolar-server (2.0.82+hg030-0~__DIST__0) __DIST__; urgency=low
 
   * new installer script calling openmolar-alter-user
