--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.84+hg037-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 17 Aug 2012 23:04:25 +0100
+
+
 openmolar-admin (2.0.83+hg036-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
