--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.84-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 17 Aug 2012 23:03:38 +0100
+
+
 openmolar-namespace (2.0.83-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
