openmolar postgres user elevated to a superuser so that client locations can be displayed on the admin screen. css and message tidy ups.

--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.85-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 20 Aug 2012 23:14:48 +0100
+
+
 openmolar-namespace (2.0.84-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
