--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.85+hg026-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 20 Aug 2012 23:15:02 +0100
+
+
 openmolar-client (2.0.84+hg025-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
