--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.85+hg045-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 20 Aug 2012 23:14:58 +0100
+
+
 openmolar-common (2.0.84+hg044-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
